Fabrice search_activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="patientslist">patientslist</string>
+    <string name="calender">calender</string>
+    <string name="visite">visite</string>
+    <string name="therapie">therapie</string>
 </resources>
